Modificacion de endpoint resources, sin queryparam y retornando estructura especificada
