# api/controllers/controller.Resources.go
@@ -3,7 +3,6 @@ package controllers
 import (
 	"SimonBK_Login/models"
 	"net/http"
-	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -14,20 +13,12 @@ import (
 // @Tags resources
 // @Accept  json
 // @Produce  json
-// @Param roleid path int true "Role ID"
 // @Success 200 {object} []models.ResourceResponse "Successfully retrieved resources"
-// @Failure 400 {object} map[string]string "Invalid role ID"
 // @Failure 500 {object} map[string]string "Error fetching resources"
-// @Router /users/resources/{roleid} [get]
+// @Router /users/resources [get]
 func Resources(c *gin.Context) {
-	fk_role_str := c.Param("roleid")
-	fk_role, err := strconv.Atoi(fk_role_str)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid role ID"})
-		return
-	}
 
-	resources, err := models.GetResourcesByRole(fk_role)
+	resources, err := models.GetResourcesByRole()
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
