# models/Resources.go
@@ -2,38 +2,33 @@ package models
 
 import "SimonBK_Login/db"
 
-type Permission struct {
-	ID         int
-	Permission string
-}
-
-type Resource struct {
-	resource string
-	actions  map[string]Permission
-}
-
-// ResourceResponse represents the structure of the response for resource retrieval
+// ResourceResponse representa la estructura de la respuesta para la recuperación de recursos
 type ResourceResponse struct {
-	ResourceName string                 `json:"resourceName"`
-	Actions      map[string]interface{} `json:"actions"`
+	Resource string                 `json:"resource"`
+	Actions  map[string]ActionRoles `json:"actions"`
+}
+
+type ActionRoles struct {
+	Roles []string `json:"roles"`
 }
 
 type TempResult struct {
 	ResourceName string `gorm:"column:resource"`
 	Permission   string
+	RoleDesc     string `gorm:"column:RoleDescription"`
 }
 
-func GetResourcesByRole(roleID int) ([]ResourceResponse, error) {
+func GetResourcesByRole() ([]ResourceResponse, error) {
 	// Realizar la consulta
 	var results []TempResult
 
 	err := db.DBConn.
 		Table("permissions_by_roles").
-		Select("resources.name as resource, permissions.permission").
+		Select("resources.name as resource, permissions.permission, roles.\"RoleDescription\"").
 		Joins("INNER JOIN permissions_by_resources on permissions_by_roles.\"Fk_PermissionsByResources\" = permissions_by_resources.id").
 		Joins("INNER JOIN resources ON permissions_by_resources.\"Fk_Resource\" = resources.id").
 		Joins("INNER JOIN permissions ON permissions_by_resources.\"Fk_Permission\" = permissions.id").
-		Where("permissions_by_roles.\"Fk_Role\" = ?", roleID).
+		Joins("INNER JOIN roles ON permissions_by_roles.\"Fk_Role\" = roles.id").
 		Scan(&results).Error
 
 	if err != nil {
@@ -41,18 +36,20 @@ func GetResourcesByRole(roleID int) ([]ResourceResponse, error) {
 	}
 
 	// Transformar los resultados
-	var resourcesMap = make(map[string]map[string]interface{})
+	var resourcesMap = make(map[string]map[string]ActionRoles)
 
 	for _, result := range results {
 		if _, ok := resourcesMap[result.ResourceName]; !ok {
-			resourcesMap[result.ResourceName] = make(map[string]interface{})
+			resourcesMap[result.ResourceName] = make(map[string]ActionRoles)
 		}
-		resourcesMap[result.ResourceName][result.Permission] = struct{}{}
+		actionRoles := resourcesMap[result.ResourceName][result.Permission]
+		actionRoles.Roles = append(actionRoles.Roles, result.RoleDesc)
+		resourcesMap[result.ResourceName][result.Permission] = actionRoles
 	}
 
 	var resources []ResourceResponse
 	for name, actions := range resourcesMap {
-		resources = append(resources, ResourceResponse{ResourceName: name, Actions: actions})
+		resources = append(resources, ResourceResponse{Resource: name, Actions: actions})
 	}
 
 	return resources, nil
